# TradeIQ

./: .env  .gitignore  404.html  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  index.html  main.cpp  makefile  sitemap.xml
.cache/: AAA_2023-01-01_2023-01-02.json  AAPL_2023-01-01_2023-12-31.json  AAPL_2023-01-03_2023-01-05.json  BBB_2023-01-01_2023-01-02.json  FAKE_2023-01-01_2023-01-02.json
.github/workflows/: ci.yml  release.yml
TRADEIQDocs/: mkdocs.yml
TRADEIQDocs/docs/: index.md
TRADEIQDocs/docs/stats/: STATS_FUNCTIONS.md  STATS_OVERVIEW.md
TRADEIQDocs/docs/tests/: TEST_OVERVIEW.md
TRADEIQDocs/site/: 404.html  index.html
TRADEIQDocs/site/search/: search_index.json
TRADEIQDocs/site/stats/STATS_FUNCTIONS/: index.html
TRADEIQDocs/site/tests/TEST_OVERVIEW/: index.html
TradeIQ/annotated/: index.html
TradeIQ/class_member_enums/: index.html
TradeIQ/class_member_functions/: index.html
TradeIQ/class_member_typedefs/: index.html
TradeIQ/class_member_variables/: index.html
TradeIQ/class_members/: index.html
TradeIQ/classes/: index.html
TradeIQ/files/: index.html
TradeIQ/functions/: index.html
TradeIQ/hierarchy/: index.html
TradeIQ/links/: index.html
TradeIQ/macros/: index.html
TradeIQ/modules/: index.html
TradeIQ/namespace_member_enums/: index.html
TradeIQ/namespace_member_functions/: index.html
TradeIQ/namespace_member_typedefs/: index.html
TradeIQ/namespace_member_variables/: index.html
TradeIQ/namespace_members/: index.html
TradeIQ/namespaces/: index.html
TradeIQ/pages/: index.html
TradeIQ/variables/: index.html
api/: index.html
assets/.doxy/TradeIQ/xml/: Doxyfile.xml
doxygen/: annotated.html  annotated_dup.js  capture_8cpp.html  capture_8cpp.js  capture_8hpp.html  capture_8hpp.js  capture_8hpp_source.html  class_default_http_client-members.html  class_default_http_client.html  class_default_http_client.js  class_http_client-members.html  class_http_client.html  class_http_client.js  class_matrix_printer-members.html  class_matrix_printer.html  class_price_series-members.html  class_price_series.html  class_price_series.js  class_tiingo_client-members.html  class_tiingo_client.html  class_tiingo_client.js  classbasic__json-members.html  classbasic__json.html  classbyte__container__with__subtype-members.html  classbyte__container__with__subtype.html  classdetail_1_1binary__reader-members.html  classdetail_1_1binary__reader.html  classdetail_1_1binary__writer-members.html  classdetail_1_1binary__writer.html  classdetail_1_1exception-members.html  classdetail_1_1exception.html  classdetail_1_1file__input__adapter-members.html  classdetail_1_1file__input__adapter.html  classdetail_1_1input__stream__adapter-members.html  classdetail_1_1input__stream__adapter.html  classdetail_1_1invalid__iterator-members.html  classdetail_1_1invalid__iterator.html  classdetail_1_1iter__impl-members.html  classdetail_1_1iter__impl.html  classdetail_1_1iteration__proxy-members.html  (+462 more)
doxygen/search/: all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_19.js  all_1a.js  all_2.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  classes_10.js  classes_3.js  classes_7.js  classes_b.js  classes_e.js  enumvalues_10.js  files_0.js  files_1.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  files_a.js  functions_11.js  functions_12.js  functions_14.js  functions_2.js  functions_3.js  (+14 more)
search/: search_index.json
src/: main.cpp
src/api/: default_http_client.cpp  default_http_client.hpp  http_client.hpp  tiingo_client.cpp  tiingo_client.hpp
src/cli/: matrix_printer.cpp  matrix_printer.hpp
src/core/: price_series.cpp  price_series.hpp  stats_engine.cpp  stats_engine.hpp  strategy_engine.hpp
src/stats/: capture.cpp  capture.hpp  correlation.cpp  correlation.hpp  distribution.cpp  distribution.hpp  drawdowns.cpp  drawdowns.hpp  ratios.cpp  ratios.hpp  returns.cpp  returns.hpp  utils.cpp  utils.hpp  volatility.cpp  volatility.hpp
src/utils/: math_utils.cpp  math_utils.hpp
stats/STATS_FUNCTIONS/: index.html
stats/STATS_OVERVIEW/: index.html
tests/: test_stats_engine.cpp  test_tiingo_client.cpp
tests/TEST_OVERVIEW/: index.html
tests/core/: test_capture.cpp  test_correlation.cpp  test_distribution.cpp  test_drawdowns.cpp  test_ratios.cpp  test_returns.cpp  test_utils.cpp  test_volatility.cpp
tests/include/: TestHelpers.hpp
